# concession-manager-web

./: .env.example  .gitignore  README.md  conftest.py  credentials.py  pyproject.toml
.github/workflows/: playwright.yml
clients/: api_client.py
docs/: qa-id-convention.md
pages/: base_page.py  home_page.py  sign_in_page.py
scripts/: generate_bug_report.py
tests/api/: conftest.py  test_example_api.py
tests/e2e/: conftest.py  test_home_page.py  test_sign_in_page.py
