[project]
name = "concession-manager-web"
version = "0.1.0"
description = "Playwright + pytest (Python) test suite for concession-manager-web: Page Object Model, API client, Allure reporting, known-bug tracking, CI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "allure-pytest>=2.16.0",
    "httpx>=0.28.1",
    "pytest-playwright>=0.8.0",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
base_url = "https://concessions.roamstay.com"
addopts = "--browser=chromium --screenshot=only-on-failure --video=retain-on-failure --tracing=retain-on-failure --alluredir=allure-results --clean-alluredir"
markers = [
    "smoke: quick critical-path checks",
    "frontend: UI/E2E tests under tests/e2e (auto-applied)",
    "backend: API tests under tests/api (auto-applied)",
    "known_bug: regression test for a tracked, pre-existing product bug (see .github/workflows/playwright.yml's non-blocking known-bugs job)",
]
